// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders default tooltip 1`] = `
.c0 {
  position: fixed;
  top: 12px;
  left: 12px;
  right: 12px;
  color: #fff;
  z-index: 12000;
  background: #1A2440;
  display: grid;
  grid-template-columns: 50px auto 100px;
  grid-gap: 0;
}

.c0 .c1 {
  margin-right: 12px;
  margin-bottom: 6px;
}

.c0 .c3 {
  margin-bottom: 0;
  margin-right: 6px;
  color: #fff;
  font-size: 75%;
  opacity: 0.8;
}

.c0 .c2 {
  margin-bottom: 0;
  color: #fff;
  font-size: 75%;
  opacity: 0.5;
}

@media (min-width:767px) {
  .c0 {
    padding: 12px;
    grid-template-columns: 60px 180px 140px auto 120px;
  }
}

<div
  className="c0"
>
  Title
</div>
`;

exports[`Tooltip renders tooltip for mobile 1`] = `
.c0 {
  position: fixed;
  top: 12px;
  left: 12px;
  right: 12px;
  color: #fff;
  z-index: 12000;
  background: #1A2440;
  display: grid;
  grid-template-columns: 50px auto 100px;
  grid-gap: 0;
}

.c0 .c1 {
  margin-right: 12px;
  margin-bottom: 6px;
}

.c0 .c3 {
  margin-bottom: 0;
  margin-right: 6px;
  color: #fff;
  font-size: 75%;
  opacity: 0.8;
}

.c0 .c2 {
  margin-bottom: 0;
  color: #fff;
  font-size: 75%;
  opacity: 0.5;
}

@media (min-width:767px) {
  .c0 {
    padding: 12px;
    grid-template-columns: 60px 180px 140px auto 120px;
  }
}

<div
  className="c0"
  color="green"
>
  Title
</div>
`;
